_includes/manuals/1.4/3.1.2_puppet_versions.md
Foreman integrates with Puppet and Facter in a few places, but generally using a recent, stable version will be fine.  The exact versions of Puppet and Facter that Foreman is compatible with are listed below.

<table class="table table-bordered table-condensed">
  <tr>
    <th>Puppet version</th>
    <th>Foreman installer</th>
    <th>Smart proxy</th>
    <th><a href="/manuals/{{page.version}}/index.html#3.5.4PuppetReports">Report/fact processors</a></th>
    <th><a href="/manuals/{{page.version}}/index.html#3.5.5FactsandtheENC">External node classifier</a></th>
  </tr>
  <tr>
    <td>0.25.x</td>
    <td>Not supported</td>
    <td>Untested</td>
    <td>Untested</td>
    <td>Supported <span class='footnote'>*</span></td>
  </tr>
  <tr>
    <td>2.6.0 - 2.6.5</td>
    <td>Not supported</td>
    <td>Untested</td>
    <td>Untested</td>
    <td>Supported <span class='footnote'>*</span></td>
  </tr>
  <tr>
    <td>2.6.5+</td>
    <td>Not supported</td>
    <td>Supported</td>
    <td>Supported</td>
    <td>Supported</td>
  </tr>
  <tr>
    <td>2.7.x</td>
    <td>Supported</td>
    <td>Supported</td>
    <td>Supported</td>
    <td>Supported</td>
  </tr>
  <tr>
    <td>3.0.x</td>
    <td>Limited support</td>
    <td>1.1 or higher</td>
    <td>Supported</td>
    <td>Supported</td>
  </tr>
  <tr>
    <td>3.1.x - 3.4.x</td>
    <td>1.1 or higher</td>
    <td>1.1 or higher</td>
    <td>Supported</td>
    <td>Supported</td>
  </tr>
  <tr>
    <td>3.5.x</td>
    <td>1.4.1 or higher</td>
    <td>1.1 or higher</td>
    <td>Supported</td>
    <td>Supported</td>
  </tr>
</table>

Lines indicated with <span class='footnote'>*</span> require `Parametrized_Classes_in_ENC` in Foreman to be disabled.

The Foreman installer and packages are generally incompatible with Puppet Enterprise, however with some manual reconfiguration, individual Foreman components such as the smart proxy should work if needed (some further unsupported documentation can be found on the wiki).  The installer in particular will conflict with a Puppet Enterprise installation.  It is recommended that Foreman is installed using [Puppet "open source"](http://docs.puppetlabs.com/guides/installation.html).

#### Facter compatibility

Foreman is known to be compatible with all Facter 1.x releases.

The Foreman installer has an incompatibility with Facter 2.x, fixed in Foreman 1.4.2 via [#4372](http://projects.theforeman.org/issues/4372).

Compatibility with structured facts in Facter 2.x is being introduced via [#4528](http://projects.theforeman.org/issues/4528).
