_includes/manuals/1.12/3.1.2_puppet_versions.md
Foreman integrates with Puppet and Facter in a few places, but generally using a recent, stable version will be fine.  The exact versions of Puppet, Puppet Server and Facter that Foreman is compatible with are listed below.

<table class="table table-bordered table-condensed">
  <tr>
    <th>Puppet version</th>
    <th>Foreman installer</th>
    <th>Smart proxy</th>
    <th><a href="/manuals/{{page.version}}/index.html#3.5.4PuppetReports">Report/fact processors</a></th>
    <th><a href="/manuals/{{page.version}}/index.html#3.5.5FactsandtheENC">External node classifier</a></th>
  </tr>
  <tr>
    <td>0.25.x</td>
    <td>Not supported</td>
    <td>Untested</td>
    <td>Untested</td>
    <td>Supported <span class='footnote'>*</span></td>
  </tr>
  <tr>
    <td>2.6.0 - 2.6.5</td>
    <td>Not supported</td>
    <td>Untested</td>
    <td>Untested</td>
    <td>Supported <span class='footnote'>*</span></td>
  </tr>
  <tr>
    <td>2.6.5+</td>
    <td>Not supported</td>
    <td>Supported</td>
    <td>Supported</td>
    <td>Supported</td>
  </tr>
  <tr>
    <td>2.7.x</td>
    <td>Not supported</td>
    <td>Supported</td>
    <td>Supported</td>
    <td>Supported</td>
  </tr>
  <tr>
    <td>3.0.x</td>
    <td>Not supported</td>
    <td>Supported</td>
    <td>Supported</td>
    <td>Supported</td>
  </tr>
  <tr>
    <td>3.1.x - 3.8.x</td>
    <td>Supported</td>
    <td>Supported</td>
    <td>Supported</td>
    <td>Supported</td>
  </tr>
  <tr>
    <td>4.x (AIO)</td>
    <td>Supported</td>
    <td>Supported</td>
    <td>Supported</td>
    <td>Supported</td>
  </tr>
  <tr>
    <td>4.x (non-AIO)</td>
    <td>Supported</td>
    <td>Supported</td>
    <td>Supported</td>
    <td>Supported</td>
  </tr>
</table>

Lines indicated with <span class='footnote'>*</span> require `Parametrized_Classes_in_ENC` in Foreman to be disabled.

#### Puppet Server compatibility

Puppet Server is the application for serving Puppet agents used by default in Puppet 4 AIO installations.

<table class="table table-bordered table-condensed">
  <tr>
    <th>Puppet Server version</th>
    <th>Foreman installer</th>
    <th>Notes</th>
  </tr>
  <tr>
    <td>1.x</td>
    <td>Limited support</td>
    <td />
  </tr>
  <tr>
    <td>2.0 - 2.1</td>
    <td>Limited support</td>
    <td>Requires server_use_legacy_use_conf, server_puppetserver_version to be set</td>
  </tr>
  <tr>
    <td>2.2 - 2.5</td>
    <td>Supported</td>
    <td />
  </tr>
</table>

#### AIO installer compatibility

The Foreman installer supports both AIO and non-AIO configurations when using Puppet 4, switching behavior automatically based on the version of Puppet installed (usually during the first run when answers are stored).

When using an AIO installation of Puppet to run the installer, it will default to configuring the Puppet Server application, and when using a non-AIO version of Puppet, it defaults to a traditional Rack/Passenger configuration.

#### Facter compatibility

Foreman is known to be compatible with all Facter 1.x releases.

For Facter 2.x, both Foreman installer and Foreman 1.4.2 or higher are required.

Compatibility with structured facts in Facter 2.x is being introduced via [#4528](http://projects.theforeman.org/issues/4528).

#### Puppet Enterprise compatibility

The Foreman installer and packages are generally incompatible with Puppet Enterprise, however with some manual reconfiguration, individual Foreman components such as the smart proxy should work if needed (some further unsupported documentation can be found on the wiki).  The installer in particular will conflict with a Puppet Enterprise installation.  It is recommended that Foreman is installed using [Puppet "open source"](http://docs.puppetlabs.com/guides/installation.html).

